# django-recipe-api

./: .dockerignore  Dockerfile  README.md  builder.sh  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: .flake8  .isort.cfg
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: urls.py  views.py
app/recipe/tests/: test_recipe_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
