[tool.poetry]
name = "django-recipe-api"
version = "0.1.0"
description = ""
authors = ["enaya <rollingsxshi@gmail.com>"]
readme = "README.md"
packages = [{include = "django_recipe_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
